# life-slope_actuary_python

./: .gitignore  README.md  pyproject.toml
PBR_Solver/: README.md  main.py  pyproject.toml  vm20.py  vm20_params.py
SBA_Solver/: pyproject.toml  sba_solver.py  settings.py
Shared/: sigma_report.py
